apps/audiobookshelf/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: books
          persistentVolumeClaim:
            claimName: books
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobooks
        - name: podcasts
          persistentVolumeClaim:
            claimName: podcasts
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: metadata
          persistentVolumeClaim:
            claimName: metadata
      containers:
        - name: app
          image: ghcr.io/advplyr/audiobookshelf:2.35.1@sha256:1eef6716183c52abafe5405e7d6be8390248ecd59c7488c44af871757ac8fc4d
          envFrom: []
          volumeMounts:
            - name: books
              mountPath: /books
            - name: audiobooks
              mountPath: /audiobooks
            - name: podcasts
              mountPath: /podcasts
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
          resources:
            requests:
              memory: 128M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [audiobookshelf]
